validator_derive_tests/tests/compile-fail/custom/multiple_types_in_arg.rs
use validator::Validate;

#[derive(Validate)]
struct Test {
    #[validate(custom(function = "hello_world", arg = "i64, i64"))]
    s: String,
}

fn main() {}
