validator_derive_tests/tests/compile-fail/custom/multiple_types_in_arg.stderr
error: Invalid attribute #[validate] on field `s`: invalid argument type for `arg` of `custom` validator: The string has to be a single type.
       (Tip: You can combine multiple types into one tuple.)
 --> tests/compile-fail/custom/multiple_types_in_arg.rs:5:55
  |
5 |     #[validate(custom(function = "hello_world", arg = "i64, i64"))]
  |                                                       ^^^^^^^^^^
